Hopefully fixed the invisible button issue

--- a/custom-styles.css
+++ b/custom-styles.css
@@ -184,10 +184,6 @@ body {
 	font-size: 30px;
 }
 
-#register-page {
-	overflow: hidden;
-}
-
 .register-box {
 	padding-top: 60px;
 	padding-bottom: 60px;
